<resources>
    <string name="app_name">THE MGHS APP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jobinquiriesbtn">jobInquiriesBtn</string>
    <string name="servicerequestsbtn">serviceRequestsBtn</string>

    <!-- HOME -->
    <string name="strategic_consultation_desc">We offer expert strategic consultation services to help you develop and implement effective business strategies tailored to your needs.</string>
    <string name="branding_strategy_desc">Our branding strategy services are designed to enhance your brand\'s identity and presence in the market, ensuring consistency and impact.</string>
    <string name="feasibility_analysis_desc">We conduct comprehensive feasibility analysis to assess the viability of your business ideas, helping you make informed decisions.</string>
    <string name="social_media_marketing_desc">Our social media marketing and management services will help you effectively reach and engage with your target audience on various platforms.</string>
    <string name="hr_management_desc">MGHS offers human resource management services to streamline your HR processes, from recruitment to employee development and retention.</string>
    <string name="performance_analysis_desc">Our business performance analysis services provide you with detailed insights into your business operations, helping you optimize and improve overall performance.</string>
    <string name="negotiation_brand_franchise_desc">MGHS Services negotiates on your behalf to acquire your franchise, location, products, and prices that are suitable for your needs.</string>
    <string name="website_application_design_development_desc"><![CDATA[We provide Web & App Design & Development Services for your small and medium business. We\'ll design your website with the latest development & mobile applications, providing content management as well.]]></string>
    <string name="accounting_desc">MGHS Services provides financial accounting services for your small and medium-sized business. A full-service accounting and professional services that offers the simplest way to handle accounts.</string>
    <string name="location_search_desc">Provides location search services for your small and medium business. We offer search assistance for you to find the best location for your business startup.</string>
    <string name="business_construction_desc">MGHS Services provides construction services for your business like electrical and mechanical works, etc.</string>
    <string name="financial_resource_desc">Finding the best type of investor for your business is a crucial step in realizing its overall vision. MGHS Services will help you connect to the right investors.</string>

    <string name="about_desc">Read how MGHS came to be.</string>
    <string name="privacy_policy_desc">Read how MGHS collects, uses, discloses, and safeguards your information.</string>
    <string name="contact_us_desc">Get in touch with the MGHS team.</string>
    <string name="learn_more">Learn More</string>

    <!-- SERVICES -->
    <string name="strategic_consultation_details">We help realize each business’ potential and work to learn and uncover that potential in each of our clients and partners. With our help, your strategic gains and the goals in your vision statement will be realized.</string>
    <string name="business_performance_analysis_detail">We provide performance analysis and assessment for small- and medium-sized businesses to benefit your business strategy. Armed with this knowledge, you can proudly meet the challenges of our modern business landscape.</string>
    <string name="feasibility_analysis_details">We aim to measure the success or failure probability of any business and, to that end, research the products/services of your company. We offer detailed reports to aid in developing your products and services.</string>
    <string name="hr_management_details">We provide Human Resources Services for small and medium businesses and hire staff to establish your business locally and abroad. Our wealth of experience and rich network can meet your firm’s needs.</string>
    <string name="social_media_marketing_and_management_details">MGHS Services integrates your business with social media sites such as Facebook, Twitter, Instagram, YouTube, and more. Our rich knowledge and experience can meet the needs of local and international businesses.</string>
    <string name="website_app_development_details"><![CDATA[We provide Web & Mobile App Design, Development, and content management services for small and medium businesses. Expect only the latest and most stylish designs for our clients. We offer design and maintenance of your site according to its unique needs.]]></string>
    <string name="financial_resource_details">We find ideal investors for your business, which is crucial in realizing its overall vision. With our well-connected network of investors, we can help you meet those quotas and charges head-on and guide your firm to become both presentable and ideal.</string>
    <string name="accounting_details">We provide full-featured and simple financial accounting for small and medium-sized businesses. We offer no-hassle, straightforward ways to understand, interface with, and handle your accounts. With technology, we modernize accounting into the new age.</string>
    <string name="location_search_details">We provide location search services for the best locations for small and medium businesses. Our experts in this field will guide your firm to find an ideal place that meets your firm’s needs.</string>
    <string name="business_construction_details">MGHS Services provides extensive construction services for your onsite business. We offer electrical and mechanical installation and design services for our clients. Our experts lend their years of experience to ensure the process goes smoothly.</string>
    <string name="negotiation_brand_franchise_details">We negotiate on your behalf to get your franchise or location only the finest prices. Our experts can find ideas and creative solutions to meet your firm’s unique needs and match the best area according to said needs.</string>
    <string name="branding_strategy_details">We offer cutting-edge strategic branding solutions through consultation and advising your marketing strategy. Our services encompass diverse fields such as Logo and Design, print design, and others.</string>

</resources>