<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicesDetailedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ServicesDetailedFragment"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/serviceCategoryHeading"
            style="@style/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Marketing &amp; Franchising" />

        <!-- Detailed Service 1 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/detailedCard1"
                style="@style/DetailedCardStyle">

                <TextView
                    style="@style/DetailedCardHeadingStyle"
                    android:text="Location Search" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/location_search" />

                <TextView
                    style="@style/DetailedCardTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_search_details"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Detailed Service 2 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/detailedCard2"
                style="@style/DetailedCardStyle">

                <TextView
                    style="@style/DetailedCardHeadingStyle"
                    android:text="Business Construction" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/business_construction" />

                <TextView
                    style="@style/DetailedCardTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_construction_details" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Detailed Service 3 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/detailedCard3"
                style="@style/DetailedCardStyle">

                <TextView
                    style="@style/DetailedCardHeadingStyle"
                    android:text="Negotiation Brand Franchise" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/negotiation_brand_franchise" />

                <TextView
                    style="@style/DetailedCardTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/negotiation_brand_franchise_details" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Detailed Service 4 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/detailedCard4"
                style="@style/DetailedCardStyle">

                <TextView
                    style="@style/DetailedCardHeadingStyle"
                    android:text="Branding Strategy" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/branding_strategy" />

                <TextView
                    style="@style/DetailedCardTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/branding_strategy_details" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
