<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicesDetailedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ServicesDetailedFragment"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/serviceCategoryHeading"
            style="@style/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Business Planning" />

        <!-- Detailed Service 1 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/detailedCard1"
                style="@style/DetailedCardStyle">

                <TextView
                    style="@style/DetailedCardHeadingStyle"
                    android:text="Strategic Consultation" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/strategic_consultation" />

                <TextView
                    style="@style/DetailedCardTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strategic_consultation_details"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Detailed Service 2 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/detailedCard2"
                style="@style/DetailedCardStyle">

                <TextView
                    style="@style/DetailedCardHeadingStyle"
                    android:text="Business Performance Analysis" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/business_performance_analysis" />

                <TextView
                    style="@style/DetailedCardTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_performance_analysis_detail"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Detailed Service 3 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/detailedCard3"
                style="@style/DetailedCardStyle">

                <TextView
                    style="@style/DetailedCardHeadingStyle"
                    android:text="Feasibility Analysis" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/feasibility_analysis" />

                <TextView
                    style="@style/DetailedCardTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feasibility_analysis_details"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Detailed Service 4 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/detailedCard4"
                style="@style/DetailedCardStyle">

                <TextView
                    style="@style/DetailedCardHeadingStyle"
                    android:text="Human Resource Management" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:src="@drawable/hr_management" />

                <TextView
                    style="@style/DetailedCardTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hr_management_details"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
