<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/MGHSLightGreen">

        <TextView
            style="@style/Heading"
            android:id="@+id/homeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayoutMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:visibility="visible"
            app:alignmentMode="alignMargins"
            app:columnCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeHeading"
            app:layout_constraintWidth_default="spread">

            <RadioButton
                android:id="@+id/radioButton1"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/rocket"
                android:text="Services"
                android:contentDescription="Rocket Icon"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/careers"
                android:text="Careers"
                android:contentDescription="Careers Icon"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal" />

            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/light_bulb"
                android:text="Blog"
                android:contentDescription="Blogs Icon"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal" />

            <RadioButton
                android:id="@+id/radioButton4"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/contact"
                android:text="Contact"
                android:contentDescription="Contact Icon"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal" />

            <RadioButton
                android:id="@+id/radioButton5"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/quiz"
                android:text="Quiz"
                android:contentDescription="Quiz Icon"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal" />

            <RadioButton
                android:id="@+id/radioButton6"
                style="@style/RadioButtonStyle"
                android:drawableTop="@drawable/settings"
                android:text="Settings"
                android:contentDescription="Settings Icon"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal" />
        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayoutInquiries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            app:alignmentMode="alignMargins"
            app:columnCount="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gridLayoutMenu">

            <Button
                android:id="@+id/button3"
                style="@style/btnOutline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Job Inquiries"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                style="@style/btnFilled"
                android:text="Service Requests"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal" />
        </androidx.gridlayout.widget.GridLayout>

        <TextView
            style="@style/labelHeading"
            android:id="@+id/featuredServicesHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Featured Services"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gridLayoutInquiries" />

        <HorizontalScrollView
            android:id="@+id/featuredServicesInfoCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/featuredServicesHeading">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- InfoCard 1: Strategic Consultation -->
                <androidx.cardview.widget.CardView style="@style/InfoCardStyle">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="350dp"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            style="@style/InfoCardHeading"
                            android:text="Strategic Consultation" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="75dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/chess_knight_icon"
                            android:contentDescription="Consultation Icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/strategic_consultation_desc" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- InfoCard 2: Branding Strategy -->
                <androidx.cardview.widget.CardView style="@style/InfoCardStyle">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="350dp"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            style="@style/InfoCardHeading"
                            android:text="Branding Strategy" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="75dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/tag_line_icon"
                            android:contentDescription="Branding Icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/branding_strategy_desc" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- InfoCard 3: Feasibility Analysis -->
                <androidx.cardview.widget.CardView style="@style/InfoCardStyle">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="350dp"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            style="@style/InfoCardHeading"
                            android:text="Feasibility Analysis" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="75dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/pie_chart_icon"
                            android:contentDescription="Feasibility Icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/feasibility_analysis_desc" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- InfoCard 4: Social Media Marketing & Management -->
                <androidx.cardview.widget.CardView style="@style/InfoCardStyle">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="350dp"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            style="@style/InfoCardHeading"
                            android:text="Social Media Marketing &amp; Management"
